[metadata]
name = HDXrate
summary = Calculate HDX intrinsic exchange rates.
description-file = README.rst
author = Jochem Smit
author_email = jhmit@gmail.com
home-page = https://github.com/Jhsmit/HDXrate
license = GNU GPL
python_requires = >=3.6
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Topic :: Scientific/Engineering :: Bio-Informatics
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

keywords =
    HDX-MS
    exchange rate

[files]
packages =
    hdxrate

[wheel]
universal = 1